--- a/src/templates/prism-okaidia.css
+++ b/src/templates/prism-okaidia.css
@@ -7,16 +7,12 @@
 code[class*="language-"],
 pre[class*="language-"] {
     color: #f8f8f2;
-    background: none;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    font-size: 1em;
+    text-shadow: 0px 1px rgba(0,0,0,0.3);
+    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    direction: ltr;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
 
     -moz-tab-size: 4;
     -o-tab-size: 4;
@@ -33,19 +29,17 @@ pre[class*="language-"] {
     padding: 1em;
     margin: .5em 0;
     overflow: auto;
-    border-radius: 0.3em;
 }
 
-:not(pre)>code[class*="language-"],
+:not(pre) > code[class*="language-"],
 pre[class*="language-"] {
     background: #272822;
 }
 
 /* Inline code */
-:not(pre)>code[class*="language-"] {
+:not(pre) > code[class*="language-"] {
     padding: .1em;
     border-radius: .3em;
-    white-space: normal;
 }
 
 .token.comment,
@@ -64,45 +58,39 @@ pre[class*="language-"] {
 }
 
 .token.property,
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted {
+.token.tag {
     color: #f92672;
 }
 
 .token.boolean,
-.token.number {
+.token.number{
     color: #ae81ff;
 }
 
 .token.selector,
 .token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
+.token.string {
     color: #a6e22e;
 }
+
 
 .token.operator,
 .token.entity,
 .token.url,
 .language-css .token.string,
-.style .token.string,
-.token.variable {
+.style .token.string {
     color: #f8f8f2;
 }
 
 .token.atrule,
-.token.attr-value,
-.token.function,
-.token.class-name {
+.token.attr-value
+{
     color: #e6db74;
 }
 
-.token.keyword {
-    color: #66d9ef;
+
+.token.keyword{
+    color: #f92672;
 }
 
 .token.regex,
@@ -110,13 +98,8 @@ pre[class*="language-"] {
     color: #fd971f;
 }
 
-.token.important,
-.token.bold {
+.token.important {
     font-weight: bold;
-}
-
-.token.italic {
-    font-style: italic;
 }
 
 .token.entity {
